Feat: 검색 성능 비교 테스트코드